fixed news secttion on mobile screen

--- a/frontend/src/components/ui/Landing/ui/Result/Result.scss
+++ b/frontend/src/components/ui/Landing/ui/Result/Result.scss
@@ -7,7 +7,16 @@
         margin-top: 24px;
         display: grid;
         grid-template-columns: repeat(4,1fr);
+        @media screen and (max-width: $tablet-max) {
+            grid-template-columns: repeat(2,1fr);
+        }
+        @media screen and (max-width: $mobile-max) {
+            grid-template-columns: 1fr;
+        }
         .results__list-item{
+            @media screen and (max-width: $tablet-max) {
+                text-align: center;
+            }
             .results__list-item--text{
                 color: $title-text;
                 margin-top: 8px;
